--- a/resources/rules/default.clash.meta.yaml
+++ b/resources/rules/default.clash.meta.yaml
@@ -7,53 +7,59 @@ allow-lan: true
 bind-address: "*"
 mode: rule
 log-level: info
+tcp-concurrent: true
+unified-delay: true
 external-controller: 127.0.0.1:9090
 
 dns:
   enable: true
   # listen: 0.0.0.0:53
-  ipv6: false
 
   default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
-  enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
-  use-hosts: true
   nameserver:
     - https://1.12.12.12/dns-query
     - https://223.5.5.5/dns-query
-  fallback:
-    - https://doh.dns.sb/dns-query
-    - https://dns.cloudflare.com/dns-query
-    - https://dns.twnic.tw/dns-query
-    - tls://8.8.4.4:853
-  fallback-filter:
-    geoip: true
-    ipcidr:
-      - 240.0.0.0/4
-      - 0.0.0.0/32
+  nameserver-policy:
+    "geosite:cn,private":
+      - https://1.12.12.12/dns-query
+      - https://223.5.5.5/dns-query
+    "geosite:geolocation-!cn":
+      - https://94.140.14.140/dns-query
+      - https://1.0.0.1/dns-query
+  fallback-filter: { geoip: true, ipcidr: [240.0.0.0/4, 0.0.0.0/32, 223.75.236.241/32, 182.43.124.6/32, 106.74.25.198/32, 183.192.65.101/32]}
 
 proxies:
 
 proxy-groups:
   - { name: "$app_name", type: select, proxies: ["自动选择", "故障转移"] }
-  - { name: "自动选择", type: url-test, proxies: [], url: "http://www.gstatic.com/generate_204", interval: 86400 }
-  - { name: "故障转移", type: fallback, proxies: [], url: "http://www.gstatic.com/generate_204", interval: 7200 }
+  - { name: "自动选择", type: url-test, proxies: [], url: "https://cp.cloudflare.com/generate_204", interval: 86400 }
+  - { name: "故障转移", type: fallback, proxies: [], url: "https://cp.cloudflare.com/generate_204", interval: 7200 }
+
+  
+rule-providers:
+  AWAvenue:
+    type: http
+    behavior: domain
+    url: "https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/AWAvenue-Ads-Rule-Clash.yaml"
+    interval: 600
 
 rules:
   # 自定义规则
   ## 您可以在此处插入您补充的自定义规则（请注意保持缩进）
-
   # Google 中国服务
   - DOMAIN-SUFFIX,services.googleapis.cn,$app_name
   - DOMAIN-SUFFIX,xn--ngstr-lra8j.com,$app_name
-
+  - DOMAIN-SUFFIX,qcsub.top,DIRECT
+  - RULE-SET,AWAvenue,REJECT
   # Apple
   - DOMAIN,safebrowsing.urlsec.qq.com,DIRECT # 如果您并不信任此服务提供商或防止其下载消耗过多带宽资源，可以进入 Safari 设置，关闭 Fraudulent Website Warning 功能，并使用 REJECT 策略。
   - DOMAIN,safebrowsing.googleapis.com,DIRECT # 如果您并不信任此服务提供商或防止其下载消耗过多带宽资源，可以进入 Safari 设置，关闭 Fraudulent Website Warning 功能，并使用 REJECT 策略。
   - DOMAIN,developer.apple.com,$app_name
   - DOMAIN-SUFFIX,digicert.com,$app_name
+  
   - DOMAIN,ocsp.apple.com,$app_name
   - DOMAIN,ocsp.comodoca.com,$app_name
   - DOMAIN,ocsp.usertrust.com,$app_name
